# damascus-code

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  justfile  task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/damascus/: __init__.py  config.py  main.py
backend/damascus/agents/: __init__.py  api.py  communication.py  models.py  performance.py  service.py
backend/damascus/benchmarks/: __init__.py  api.py  models.py  scoring.py  service.py
backend/damascus/core/: __init__.py
backend/damascus/core/events/: __init__.py  bus.py  types.py
backend/damascus/core/lifecycle/: __init__.py  manager.py
backend/damascus/core/observability/: __init__.py  telemetry.py
backend/damascus/core/registry/: __init__.py  agents.py  models.py  tools.py  workflows.py
backend/damascus/core/runtime/: __init__.py  interface.py
backend/damascus/core/runtime/langgraph/: __init__.py  adapter.py
backend/damascus/core/scheduler/: __init__.py  scheduler.py
backend/damascus/core/state/: __init__.py  manager.py
backend/damascus/evolution/: __init__.py  analyzer.py  api.py  evaluation.py  generator.py  lineage.py  models.py  promotion.py  rollback.py  service.py
backend/damascus/memory/: __init__.py  api.py  episodic.py  models.py  semantic.py  service.py  working.py
backend/damascus/models/: __init__.py  api.py  interface.py  router.py  service.py
backend/damascus/models/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py  openrouter.py
backend/damascus/research/: __init__.py  api.py  models.py  service.py
backend/damascus/security/: __init__.py  approval.py  audit.py
backend/damascus/shared/: __init__.py  cache.py  database.py  errors.py  messaging.py  storage.py  vector.py
backend/damascus/tools/: __init__.py  api.py  interface.py  service.py
backend/damascus/tools/native/: __init__.py  filesystem.py  terminal.py
backend/damascus/workflows/: __init__.py
backend/damascus/workspace/: __init__.py  api.py  models.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py
backend/tests/unit/: test_benchmarks.py  test_config.py  test_events.py  test_evolution.py  test_memory.py  test_model_routing.py  test_teams.py  test_tools.py  test_workspace.py
cli/: README.md  pyproject.toml  requirements.txt
cli/damascus_cli/: __init__.py  client.py  main.py
cli/damascus_cli/commands/: agent.py  config.py  memory.py  model.py  workflow.py  workspace.py
cli/damascus_cli/output/: __init__.py  console.py
cli/damascus_cli/tui/: app.py
cli/damascus_cli/tui/screens/: dashboard.py  memory.py  workflow.py
docker/loki/: loki-config.yml
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
scripts/: verify_setup.py
