[tool.poetry]
name = "damascus-backend"
version = "0.1.0"
description = "Damascus intelligence operating system — backend"
authors = ["Damascus Contributors"]
readme = "README.md"
packages = [{ include = "damascus" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

# Data validation and settings
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"

# Redis
redis = { extras = ["hiredis"], version = "^5.2.0" }

# Qdrant
qdrant-client = "^1.12.0"

# NATS
nats-py = "^2.9.0"

# MinIO
minio = "^7.2.0"

# Workflow runtime
langgraph = "^0.2.0"
langchain-core = "^0.3.0"

# Observability
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
prometheus-client = "^0.21.0"

# HTTP client
httpx = "^0.28.0"

# Cryptography (for secrets)
cryptography = "^44.0.0"

# Utilities
python-multipart = "^0.0.20"
python-dateutil = "^2.9.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.28.0"
ruff = "^0.6.0"
aiosqlite = "^0.20.0"
anyio = { extras = ["trio"], version = "^4.4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["damascus"]
omit = ["tests/*", "migrations/*"]
