[tool.poetry]
name = "damascus-cli"
version = "0.1.0"
description = "Damascus CLI and TUI — the primary user interface"
authors = ["Damascus Contributors"]
readme = "README.md"
packages = [{ include = "damascus_cli" }]

[tool.poetry.dependencies]
python = "^3.12"

# CLI framework — Typer wraps Click with type hints
typer = { extras = ["all"], version = "^0.15.1" }

# TUI framework — Textual for interactive terminal dashboards
textual = "^0.74.0"

# Rich for console output formatting
rich = "^13.7.0"

# HTTP client to call backend API
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
damascus = "damascus_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]
